Add width and height to img element

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
   <main id="recipe">
     <section>
-      <img src="./assets/images/image-omelette.jpeg" alt="Image of an omelette">
+      <img src="./assets/images/image-omelette.jpeg" alt="Image of an omelette" width="880px" height="402px">
       <h1>Simple Omelette Recipe</h1>
       <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
         to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
