Fix the html structure
- Move the footer inside the body element
- Move the h1 element outside of the section element
- Remove "px" from the height and width of the img element

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 
 <body>
   <main id="recipe">
-    <img src="./assets/images/image-omelette.jpeg" alt="Image of an omelette" width="660px" height="302px">
+    <img src="./assets/images/image-omelette.jpeg" alt="Image of an omelette" width="660" height="302">
     <article>
-      <section> 
-        <h1>Simple Omelette Recipe</h1>
+      <h1>Simple Omelette Recipe</h1>
+      <section>
         <p>An easy and quick dish, perfect for any meal. This classic omelette combines beaten eggs cooked
           to perfection, optionally filled with your choice of cheese, vegetables, or meats.</p>
         <div>
@@ -58,7 +58,8 @@
         <ol>
           <li>
             <p>
-              <strong>Beat the eggs: </strong>In a bowl, beat the eggs with a pinch of salt and pepper until they are well
+              <strong>Beat the eggs: </strong>In a bowl, beat the eggs with a pinch of salt and pepper until they are
+              well
               mixed.
               You can add a tablespoon of water or milk for a fluffier texture.
             </p>
@@ -86,7 +87,8 @@
           </li>
           <li>
             <p>
-              <strong>Fold and serve: </strong>As the omelette continues to cook, carefully lift one edge and fold it over
+              <strong>Fold and serve: </strong>As the omelette continues to cook, carefully lift one edge and fold it
+              over
               the
               fillings. Let it cook for another minute, then slide it onto a plate.
             </p>
@@ -123,11 +125,10 @@
       </section>
     </article>
   </main>
+  <footer class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+    Coded by <a href="https://www.frontendmentor.io/profile/SyeerO7">Emal</a>.
+  </footer>
 </body>
-
-<footer class="attribution">
-  Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-  Coded by <a href="https://www.frontendmentor.io/profile/SyeerO7">Emal</a>.
-</footer>
 
 </html>
